# JDM-Kivy

./: .pypirc  MANIFEST.in  README.md  makefile  pyproject.toml  setup.cfg  test.py
all_dist/dist-0.0.1/: jdm_kivy-0.0.1-py3-none-any.whl
all_dist/dist-0.0.1.1/: jdm_kivy-0.0.1.1-py3-none-any.whl
all_dist/dist-0.0.1.2/: jdm_kivy-0.0.1.2-py3-none-any.whl
all_dist/dist-0.0.1.3/: jdm_kivy-0.0.1.3-py3-none-any.whl
jdm_kivy/: __init__.py
jdm_kivy/src/: Jlabel.py  Jscreen.py  config.json
src/JDM_kivy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/jdm_kivy/: Jconfig.py  Jfunctions.py  Jimage.py  Jlabel.py  Jlogger.py  Jscreen.py  Jwidget.py  Jwindow.py  __init__.py  all_color.json  config.json
src/jdm_kivy.egg-info/: PKG-INFO  SOURCES.txt
