[metadata]
name = JDM_kivy
version = 0.0.3
author = JDM
author_email = jdmaster888@gmail.com
description = JDM-Kivy
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/JDM-Github/JDM-Kivy
project_urls =
    Bug Tracker = https://github.com/JDM-Github/JDM-Kivy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
* = *.json, *.ttf
